; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_txx9dmac.c_txx9dmac_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_txx9dmac.c_txx9dmac_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.txx9dmac_dev = type { i32, %struct.TYPE_4__** }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"interrupt: status=%#x\0A\00", align 1
@MCR = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @txx9dmac_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @txx9dmac_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.txx9dmac_dev*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.txx9dmac_dev*
  store %struct.txx9dmac_dev* %7, %struct.txx9dmac_dev** %5, align 8
  %8 = load %struct.txx9dmac_dev*, %struct.txx9dmac_dev** %5, align 8
  %9 = getelementptr inbounds %struct.txx9dmac_dev, %struct.txx9dmac_dev* %8, i32 0, i32 1
  %10 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %10, i64 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.txx9dmac_dev*, %struct.txx9dmac_dev** %5, align 8
  %17 = load i32, i32* @MCR, align 4
  %18 = call i32 @dma_readl(%struct.txx9dmac_dev* %16, i32 %17)
  %19 = call i32 @dev_vdbg(i32 %15, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %18)
  %20 = load %struct.txx9dmac_dev*, %struct.txx9dmac_dev** %5, align 8
  %21 = getelementptr inbounds %struct.txx9dmac_dev, %struct.txx9dmac_dev* %20, i32 0, i32 0
  %22 = call i32 @tasklet_schedule(i32* %21)
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @disable_irq_nosync(i32 %23)
  %25 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %25
}

declare dso_local i32 @dev_vdbg(i32, i8*, i32) #1

declare dso_local i32 @dma_readl(%struct.txx9dmac_dev*, i32) #1

declare dso_local i32 @tasklet_schedule(i32*) #1

declare dso_local i32 @disable_irq_nosync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
